plugins {
    id 'java-library'
    id 'net.minecraftforge.gradle' version '6.0.54'
    id 'org.spongepowered.mixin' version '0.7-SNAPSHOT'
}
group = 'com.cappleapple.animatedinventory'
version = mod_version
base.archivesName = 'animatedinventory-forge-1.20.1'
java { toolchain.languageVersion = JavaLanguageVersion.of(17); withSourcesJar() }
minecraft {
    mappings channel: 'official', version: '1.20.1'
    runs {
        configureEach {
            workingDirectory project.file('run-' + name)
            property 'forge.logging.console.level', 'info'
            jvmArgs '-Xmx2G', '-XX:ActiveProcessorCount=2'
            mods { animatedinventory { source sourceSets.main } }
        }
        client { }
        server { args '--nogui' }
    }
}
mixin {
    add sourceSets.main, 'animatedinventory.refmap.json'
    config 'animatedinventory.mixins.json'
    config 'animatedinventory.sophisticated.mixins.json'
}
repositories {
    mavenCentral()
    maven { url = 'https://api.modrinth.com/maven'; content { includeGroup 'maven.modrinth' } }
    maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
}
jarJar.enable()
dependencies {
    minecraft "net.minecraftforge:forge:1.20.1-${forge_version}"
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
    compileOnly(annotationProcessor('io.github.llamalad7:mixinextras-common:0.5.0'))
    implementation(jarJar('io.github.llamalad7:mixinextras-forge:0.5.0')) { jarJar.ranged(it, '[0.5.0,0.6)') }
    testImplementation platform('org.junit:junit-bom:5.11.4')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}
tasks.withType(JavaCompile).configureEach { options.encoding = 'UTF-8' }
tasks.named('test', Test) { useJUnitPlatform() }
tasks.named('processResources') {
    inputs.property 'version', project.version
    filesMatching('META-INF/mods.toml') { expand(version: project.version) }
}
tasks.named('jar') {
    archiveClassifier = 'slim'
    from('LICENSE')
    manifest.attributes('MixinConfigs': 'animatedinventory.mixins.json,animatedinventory.sophisticated.mixins.json')
    finalizedBy 'reobfJar'
}
tasks.named('jarJar') {
    archiveClassifier = ''
    from('LICENSE')
    manifest.attributes('MixinConfigs': 'animatedinventory.mixins.json,animatedinventory.sophisticated.mixins.json')
}
reobf { jarJar {} }
tasks.named('jarJar').configure { finalizedBy 'reobfJarJar' }
tasks.named('build').configure { dependsOn 'jarJar' }

// Opt-in validation code is never packaged in distribution jars.
sourceSets {
    validation {
        compileClasspath += sourceSets.main.output + sourceSets.main.compileClasspath
        runtimeClasspath += sourceSets.main.output + sourceSets.main.runtimeClasspath
    }
}
configurations.validationAnnotationProcessor.extendsFrom(configurations.annotationProcessor)
if (project.hasProperty('clientValidation') || project.hasProperty('serverValidation')) {
    minecraft.runs.configureEach { mods.animatedinventory.source sourceSets.validation }
}
if (project.hasProperty('serverValidation')) {
    minecraft.runs.server.property 'animatedinventory.serverValidation', 'true'
    minecraft.runs.server.workingDirectory project.file('run-validation-server')
}
if (project.hasProperty('clientValidation')) {
    minecraft.runs.client.property 'animatedinventory.clientValidation', 'true'
    minecraft.runs.client.workingDirectory project.file('run-validation-client')
    minecraft.runs.client.args '--mixin', 'animatedinventory.validation.mixins.json'
}


if (project.hasProperty('clientValidation')) {
    tasks.matching { it.name == 'runClient' }.configureEach {
        doFirst {
            def directory = file('run-validation-client')
            new File(directory, 'config').mkdirs()
            new File(directory, 'config/fml.toml').text = 'earlyWindowControl=false\n'
            new File(directory, 'options.txt').text = 'soundCategory_master:0.0\npauseOnLostFocus:false\nfullscreen:false\nrenderDistance:2\nsimulationDistance:5\n'
            new File(directory, 'client-validation.txt').delete()
        }
        doLast {
            def report = file('run-validation-client/client-validation.txt')
            if (!report.exists() || report.text.contains('FAIL ') || !report.text.contains('PASS validation completed'))
                throw new GradleException('Client validation failed; inspect run-validation-client logs and report.')
        }
    }
}
if (project.hasProperty('serverValidation')) {
    tasks.matching { it.name == 'runServer' }.configureEach {
        doFirst {
            def directory = file('run-validation-server')
            directory.mkdirs()
            new File(directory, 'eula.txt').text = 'eula=true\n'
            new File(directory, 'server.properties').text = 'level-name=validation-world\nlevel-type=minecraft:flat\ngenerate-structures=false\nonline-mode=false\nserver-port=25911\nview-distance=2\nsimulation-distance=2\nmax-tick-time=120000\n'
            new File(directory, 'server-validation.txt').delete()
        }
        doLast {
            def report = file('run-validation-server/server-validation.txt')
            if (!report.exists() || !report.text.startsWith('PASS '))
                throw new GradleException('Server validation failed; inspect run-validation-server logs and report.')
        }
    }
}



if (project.hasProperty('sophisticatedValidation')) {
    dependencies { runtimeOnly fg.deobf('maven.modrinth:sophisticated-core:1Xl7lP0L') }
    minecraft.runs.client.property 'animatedinventory.sophisticatedValidation', 'true'
}
